<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="action_settings">Settings</string>
    <string name="default_nums">10 + 3</string>
    <string name="start_game_button">Start Game!</string>
    <string name="default_answer">3</string>
    <string name="correct_text_view_text">That is correct</string>
    <string name="incorrect_text_view_text">That is incorrect</string>
    <string name="play_again_button_text">Play Again?</string>
    <string name="game_over_text">Game Over!</string>
    <string name="score_text">Score</string>
    <string name="time_text">TextView</string>
    <string name="finished_time_text">0s</string>
    <string name="player_name_text_view_default">Player Name</string>
    <string name="score_text_view_default">Score</string>
    <string name="percent_text_view_default">Percent</string>
    <string name="high_score_button_text">High Score</string>
    <string name="player_name_edit_text_hint">Please enter your name!</string>
    <string name="starts_game_content_description">starts_game</string>
    <string name="percent_label">Percent</string>
    <string name="score_label">Score</string>
    <string name="player_name_label">Name</string>
    <string name="dark_theme_switch_title">Dark Theme</string>
    <string name="dark_theme_switch_summary_off">Dark theme off</string>
    <string name="dark_theme_switch_summary_on">Dark theme on</string>
</resources>
