<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <TextView
            android:id="@+id/playerNameItemView"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player_name_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerScoreItemView"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerPercentCorrectItemView"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/percent_label"
            android:textSize="24sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/highScoreRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem = "@layout/high_score_recycleview_item"/>

</LinearLayout>